--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8080
+        
+spring.datasource.url=jdbc:hsqldb:mem:mymemdb;DB_CLOSE_DELAY=-1
+spring.datasource.username=SA
+spring.datasource.password=
+spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
