--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-        
+
 spring.datasource.url=jdbc:hsqldb:mem:mymemdb;DB_CLOSE_DELAY=-1
 spring.datasource.username=SA
 spring.datasource.password=
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+spring.jackson.default-property-inclusion=non_empty
